# yabridge

./: .clang-format  .clang-tidy  .gitmodules  CHANGELOG.md  README.md  ROADMAP.md  backtrace.txt  cross-wine.conf  cross-wine64.conf  meson.build  meson_options.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  setup_help.md  setup_help.yml
.github/workflows/: build.yml
docs/: architecture.md  vst3.md
src/chainloader/: clap-chainloader.cpp  meson.build  utils.cpp  utils.h  vst2-chainloader.cpp  vst3-chainloader.cpp
src/common/: audio-shm.cpp  audio-shm.h  bitsery.h  communication.cpp  communication.h  configuration.cpp  configuration.h  events.h  linking.cpp  linking.h  logging.cpp  logging.h  mutual-recursion.h  notifications.cpp  notifications.h  plugins.cpp  plugins.h  process.cpp  process.h  serialization.cpp  serialization.h  toml++.h  utils.cpp  utils.h  vst24.h
src/common/bitsery/ext/: boost-path.h  ghc-path.h  in-place-optional.h  in-place-variant.h  message-reference.h  native-pointer.h  vst3.h
src/common/bitsery/traits/: small-vector.h
src/common/communication/: clap.h  common.cpp  common.h  vst2.cpp  vst2.h  vst3.h
src/common/config/: config.h.in  meson.build  version.h.in
src/common/logging/: clap.cpp  clap.h  common.cpp  common.h  vst2.cpp  vst2.h  vst3.cpp  vst3.h
src/common/serialization/: clap.h  common.h  vst2.cpp  vst2.h  vst3.h
src/common/serialization/clap/: README.md  audio-buffer.h  events.cpp  events.h  host.cpp  host.h  plugin-factory.h  plugin.cpp  plugin.h  process.cpp  process.h  stream.cpp  stream.h  version.h
src/common/serialization/clap/ext/: audio-ports-config.cpp  audio-ports-config.h  audio-ports.cpp  audio-ports.h  gui.h  latency.h  log.h  note-name.cpp  note-name.h  note-ports.cpp  note-ports.h  params.cpp  params.h  render.h  state.h  tail.h  voice-info.h
src/common/serialization/clap/factory/: plugin-factory.h
src/common/serialization/vst3/: README.md  attribute-list.cpp  attribute-list.h  audio-processor.cpp  audio-processor.h  base.cpp  base.h  bstream.cpp  bstream.h  component-handler-proxy.cpp  component-handler-proxy.h  component.cpp  component.h  connection-point-proxy.cpp  connection-point-proxy.h  context-menu-proxy.cpp  context-menu-proxy.h  context-menu-target.cpp  context-menu-target.h  event-list.cpp  event-list.h  host-application.cpp  host-application.h  host-context-proxy.cpp  host-context-proxy.h  message.cpp  message.h  param-value-queue.cpp  param-value-queue.h  parameter-changes.cpp  parameter-changes.h  physical-ui-map-list.cpp  physical-ui-map-list.h  plug-frame-proxy.cpp  plug-frame-proxy.h  plug-view-proxy.cpp  plug-view-proxy.h  plugin-base.cpp  plugin-base.h  plugin-factory-proxy.cpp  (+9 more)
src/common/serialization/vst3-impls/: context-menu-target.h
src/common/serialization/vst3/component-handler/: component-handler-2.cpp  component-handler-2.h  component-handler-3.cpp  component-handler-3.h  component-handler-bus-activation.cpp  component-handler-bus-activation.h  component-handler.cpp  component-handler.h  progress.cpp  progress.h  unit-handler-2.cpp  unit-handler-2.h  unit-handler.cpp  (+1 more)
src/common/vst3/: meson.build
src/include/llvm/: small-vector.cpp  small-vector.h
src/include/rigtorp/: MPMCQueue.h
src/include/vestige/: aeffect.h  aeffectx.h
src/plugin/: bridge.cpp  bridge.h  clap-plugin.cpp  configuration.cpp  configuration.h  host-bridge.cpp  host-bridge.h  host-process.cpp  host-process.h  meson.build  plugin-bridge.cpp  plugin-bridge.h  plugin.cpp  utils.cpp  utils.h  vst2-plugin.cpp  vst3-plugin.cpp  yabridge.cpp
src/plugin/bridges/: clap.cpp  clap.h  common.h  vst2.cpp  vst2.h  vst3-impls.cpp  vst3-impls.h  vst3.cpp  vst3.h
src/plugin/bridges/clap-impls/: plugin-factory-proxy.cpp  plugin-factory-proxy.h  plugin-proxy.cpp  plugin-proxy.h
src/plugin/bridges/vst3-impls/: component.cpp  component.h  context-menu-target.cpp  context-menu-target.h  plug-view-proxy.cpp  plug-view-proxy.h  plugin-factory-proxy.cpp  plugin-factory-proxy.h  plugin-factory.cpp  plugin-factory.h  plugin-proxy.cpp  plugin-proxy.h
src/wine-host/: asio-fix.h  boost-fix.h  bridge.cpp  bridge.h  editor.cpp  editor.h  group-host.cpp  host.cpp  individual-host.cpp  meson.build  native-includes.h  plugin-bridge.cpp  plugin-bridge.h  use-linux-asio.h  utils.cpp  utils.h  vst-host.cpp  win32-editor.cpp  wine-bridge.cpp  wine-bridge.h  xdnd-proxy.cpp  xdnd-proxy.h
src/wine-host/bridges/: clap.cpp  clap.h  common.cpp  common.h  group.cpp  group.h  vst2.cpp  vst2.h  vst3-impls.cpp  vst3-impls.h  vst3.cpp  vst3.h
src/wine-host/bridges/clap-impls/: host-proxy.cpp  host-proxy.h
src/wine-host/bridges/vst3-impls/: component-handler-proxy.cpp  component-handler-proxy.h  connection-point-proxy.cpp  connection-point-proxy.h  context-menu-proxy.cpp  context-menu-proxy.h  host-application.cpp  host-application.h  host-context-proxy.cpp  host-context-proxy.h  plug-frame-proxy.cpp  plug-frame-proxy.h
subprojects/: .gitignore  asio.wrap  bitsery-patch-5.2.0.tar.xz  bitsery-patch.tar.xz  bitsery.wrap  clap.wrap  function2-patch-4.1.0.tar.xz  function2.wrap  ghc_filesystem.wrap  tomlplusplus.wrap  vst3.wrap
subprojects/bitsery-patch/: meson.build
subprojects/packagefiles/asio/: meson.build
subprojects/packagefiles/bitsery/: meson.build
subprojects/packagefiles/clap/: meson.build
subprojects/packagefiles/function2/: meson.build
subprojects/packagefiles/ghc_filesystem/: meson.build
tools/: patch-vst3-sdk.sh  run-clang-tidy.sh
tools/migration/: README.md  migrate-ardour.py  migrate-bitwig.py  migrate-reaper.py  migrate-renoise.py
tools/vst3-sdk-patches/: vst3-sdk-patch-3.7.1.diff  vst3-sdk-patch-3.7.2.diff  vst3-sdk-patch-3.7.3.diff  vst3-sdk-patch-3.7.4.diff  vst3-sdk-patch-3.7.5.diff  vst3-sdk-patch-3.7.7.diff
tools/yabridgectl/: Cargo.toml  README.md
tools/yabridgectl/src/: actions.rs  config.rs  files.rs  main.rs  symbols.rs  util.rs  utils.rs  vst3_moduleinfo.rs
tools/yabridgectl/src/actions/: blacklist.rs
(+62 files in other folders)
